--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -45,11 +45,19 @@
     }
 
     &__programs {
-        width: 90%;
-        padding: 2rem;
-        margin: 0 auto;
-        margin-top: 3rem;
-        box-shadow: 0 1rem 2rem rgba(0,0,0,0.1);
+        display: flex;
+        margin: 4rem 2rem;
+        box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
+        // width: 90%;
+        // padding: 2rem;
+        // margin: 0 auto;
+        // margin-top: 3rem;
+        // box-shadow: 0 1rem 2rem rgba(0,0,0,0.1);
+
+        &:hover {
+            box-shadow: .5rem 2rem 2rem rgba(0,0,0,0.3);
+            transform: translateY(-2px);
+        }
 
         h1 {
             text-transform: uppercase;
@@ -58,21 +66,30 @@
 
         .home__programs-image {
             width: 100%;
+            overflow: hidden;
+
             img {
                 width: 100%;
-                border-radius: 5px;
+                min-width: 600px;
+                object-fit: cover;
+                height: 100%;
             }
         }
 
         .home__programs-content {
-            margin-top: 1rem;
+            width: 85%;
+            padding: 2rem;
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-between;
+            flex-direction: column;
+            background: #0E538F;
+
+            h1, p {
+                color: #fff;
+            }
 
             p {
-                width: 50%
+                font-size: 1.6rem;
+                margin-bottom: 1.5rem;
             }
 
             button {
@@ -80,11 +97,68 @@
                 width: 15rem;
                 text-transform: uppercase;
                 font-weight: 700;
-                border: 1.8px solid #000;
+                border: 1.8px solid #fff;
+                color: #fff;
                 border-radius: 5px;
                 background: transparent;
+                padding: 1rem;
                 cursor: pointer;
+
+                &:hover {
+                    background: #fff;
+                    color: #0E538F;
+                }
             }
+        }
+    }
+
+    .home-test {
+        display: flex;
+        margin: 4rem;
+        box-shadow: 0 1rem 2rem rgba(0,0,0,0.1);
+
+        .home-test-image {
+            width: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .home-test-content {
+            width: 85%;
+            padding: 1.5rem;
+            padding-top: 0;
+            display: flex;
+            flex-direction: column;
+            background: #0E538F;
+
+            h1 {
+                margin-top: .5rem;
+            }
+
+            h1, p {
+                color: #fff;
+            }
+
+            p {
+                font-size: 1.6rem;
+                margin-bottom: 1.5rem;
+            }
+        }
+
+        button {
+            font-size: 1.1rem;
+            width: 15rem;
+            text-transform: uppercase;
+            font-weight: 700;
+            border: 1.8px solid #fff;
+            color: #fff;
+            border-radius: 5px;
+            background: transparent;
+            cursor: pointer;
+            padding: 1rem;
         }
     }
 }
