--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -22,6 +22,25 @@
         text-transform: uppercase;
     }
 
+    .media-box {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .icons {
+        display: flex;
+        justify-content: space-between;
+        width: 5.5rem;
+
+        &__image {
+            width: 2rem;
+
+            img {
+                width: 100%;
+            }
+        }
+    }
+
     &__logo {
         width: 10rem;
         margin: 0 1rem;
