--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -21,6 +21,12 @@
         img {
             width: 100%;
         }
+
+        a:link, a:visited {
+            line-height: .6;
+            display: block;
+            width: 100%;
+        }
     }
 
     &__list {
