--- a/src/sass/_program-calculator.scss
+++ b/src/sass/_program-calculator.scss
@@ -10,12 +10,52 @@
 
     .calc-container-visible {
         display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,0.6);
+    }
+
+    .calc-container-inner {
+        background: #fff;
+        padding: 2.5rem;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        .close {
+            position: absolute;
+            top: .5rem;
+            right: .5rem;
+            width: 45px;
+            height: 35px;
+            cursor: pointer;
+
+            &__btn {
+                position: absolute;
+                top: 1rem;
+                height: 3px;
+                width: 35px;
+                background: #000;
+
+                &:nth-child(1) {
+                    transform: rotate(45deg);
+                }
+                &:nth-child(2) {
+                    transform: rotate(-45deg);
+                }
+            }
+        }
     }
 
     p {
         font-size: 1rem;
         margin-bottom: .5rem;
         margin-left: 0;
+        text-align: center;
     }
 
     .title {
@@ -45,6 +85,8 @@
     &__btns {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 20rem;
 
         .virtual-section-hidden, .remote-section-hidden, .kettlebell-section-hidden, .in-person-section-hidden {
